# chim_tools

./: Cargo.toml  build.rs  readme.md
benches/: bench.rs
src/: lib.rs
src/chim_core/: entry.rs  mod.rs
src/chim_core/loaders/: cedict_loader.rs  loader.rs  mod.rs  txt_loader.rs
src/chim_core/tokenizers/: dumb_tokenizer.rs  greedy_tokenizer.rs  mod.rs  tokenizer.rs
src/tests/: parsing.rs
src/web/: html_gen.rs
